CID-1107 Add docker image creation and push to registry

--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -29,3 +29,18 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           arguments: build
+
+  create-docker-image:
+    name: create-docker-${{ github.run_number }}
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: leanix/secrets-action@master
+        with:
+          secret-store-credentials: ${{ secrets.INJECTED_SECRET_STORE_CREDENTIALS }}
+
+      - uses: leanix/release-docker-image-action@master
+        with:
+          registry: acr-public
