--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -33,6 +33,7 @@ jobs:
   create-docker-image:
     name: create-docker-${{ github.run_number }}
     runs-on: ubuntu-latest
+    needs: [ gradle-ci ]
     if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
