CID-1107 Add docker image creation and push to registry

--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   gradle-ci:
-    name: Build and test
+    name: Build, test and publish docker image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
