--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,5 +8,7 @@ leanix:
       api-token: ${LEANIX_API_TOKEN}
       user-token: ${LEANIX_USER_TOKEN}
       config-name: ${CONFIGURATION_NAME}
+      github-token: ${GITHUB_TOKEN}
+      github-url: ${GITHUB_URL}
     auth:
       access-token-uri: https://${LEANIX_REGION}.leanix.net/services/mtm/v1
