--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -7,8 +7,7 @@ leanix:
       api-token: api-token
       user-token: user-token
       config-name: git-on-prem-config
+      github-token: github-token
+      github-url: http://localhost:6666
     auth:
-      client-id: vsm-canopy
-      client-secret: go6IJyZUqGRymTxH2Kb3xeZesv4h8TlbO9et8ku8
-      grant-type: client_credentials
       access-token-uri: http://localhost:6666/services/mtm/v1
