--- a/.github/workflows/vsm-discovery-github-action.yml
+++ b/.github/workflows/vsm-discovery-github-action.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - features/CID-1196/add-vsm-discovery-github-action
   workflow_dispatch:
 
 jobs:
@@ -34,4 +35,4 @@ jobs:
       - name: VSM discovery
         uses: leanix/vsm-discovery-github-action@v1.0.0
         with:
-          api-token: ${{ secrets.VSM_LEANIX_API_TOKEN }}
+          api-token: ${{ secrets.LXVSM_TECHNICAL_USER_TOKEN }}
