--- a/.github/workflows/vsm-discovery-github-action.yml
+++ b/.github/workflows/vsm-discovery-github-action.yml
@@ -12,13 +12,13 @@ jobs:
     name: Post Deployment
     runs-on: ubuntu-latest
     steps:
-      - name: Inject secret store credentials
+      - name: Checkout
+        uses: actions/checkout@v3
+        
+      - name: LeanIX Secrets 🔒
         uses: leanix/secrets-action@master
         with:
           secret-store-credentials: ${{ secrets.INJECTED_SECRET_STORE_CREDENTIALS }}
-
-      - name: Checkout
-        uses: actions/checkout@v3
 
       - name: Set up JDK temurin 17
         uses: actions/setup-java@v3
