--- a/.github/workflows/release-docker-image.yml
+++ b/.github/workflows/release-docker-image.yml
@@ -65,6 +65,6 @@ jobs:
         with:
           context: ./
           file: Dockerfile
-          tags: ${{ env.ACR_PUBLIC_LOGIN }}/vsm-github-broker:${{ steps.tag-action.outputs.tag }}
+          tags: ${{ env.ACR_PUBLIC_LOGIN }}/vsm-github-broker:${{ steps.tag-action.outputs.tag }}, ${{ env.ACR_PUBLIC_LOGIN }}/vsm-github-broker:latest
           push: true
           ssh: default=${{ env.SSH_AUTH_SOCK }}
