CID-1156 webhook manager service - gets list of hooks for the token provides, deletes all the hooks for the token, creates a new hook

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,6 @@ leanix:
       user-token: ${LEANIX_USER_TOKEN}
       config-name: ${LEANIX_CONFIGURATION_NAME}
       github-token: ${GITHUB_TOKEN}
-      github-url: ${GITHUB_URL}
+      github-url: ${GITHUB_URL:https://api.github.com}
     auth:
       access-token-uri: https://${LEANIX_DOMAIN}/services/mtm/v1
