--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,13 +1,13 @@
 leanix:
   vsm:
-    base-url: http://localhost:${wiremock.server.port}
+    base-url: http://localhost:${wiremock.server.port:6666}
     event-broker:
-      base-url: http://localhost:${wiremock.server.port}
+      base-url: http://localhost:${wiremock.server.port:6666}
     connector:
       api-token: api-token
       user-token: user-token
       config-name: git-on-prem-config
       github-token: github-token
-      github-url: http://localhost:${wiremock.server.port}
+      github-url: http://localhost:${wiremock.server.port:6666}
     auth:
-      access-token-uri: http://localhost:${wiremock.server.port}/services/mtm/v1
+      access-token-uri: http://localhost:${wiremock.server.port:6666}/services/mtm/v1
