--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,7 @@ leanix:
     event-broker:
       base-url: ${leanix.vsm.base-url}/vsm-events-broker
     dora:
+      total-days: 30
       base-url: https://${LEANIX_REGION}-vsm.leanix.net/services/vsm/events/v1/dora
     connector:
       api-token: ${LEANIX_API_TOKEN}
