CID-1157: Add Language and Topics for Repository Webhook

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -14,3 +14,7 @@ leanix:
       github-url: http://localhost:${wiremock.server.port:6666}
     auth:
       access-token-uri: http://localhost:${wiremock.server.port:6666}/services/mtm/v1
+
+application:
+  runner:
+    enabled: false
