--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,7 @@ leanix:
     base-url:  https://${LEANIX_REGION}.leanix.net/services/vsm-canopy/v1
     event-broker:
       base-url: ${leanix.vsm.base-url}/vsm-events-broker
+#      base-url: http://localhost:8083
     dora:
       total-days: 30
       base-url: https://${LEANIX_REGION}-vsm.leanix.net/services/vsm/events/v1/dora
@@ -13,5 +14,6 @@ leanix:
       config-name: ${LEANIX_CONFIGURATION_NAME}
       github-token: ${GITHUB_TOKEN}
       github-url: ${GITHUB_URL}
+      broker-url: ${BROKER_URL}
     auth:
       access-token-uri: https://${LEANIX_REGION}.leanix.net/services/mtm/v1
