--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -15,7 +15,8 @@ leanix:
       broker-url: http://localhost:${wiremock.server.port:6666}
     auth:
       access-token-uri: http://localhost:${wiremock.server.port:6666}/services/mtm/v1
-
+    webhook:
+      enabled: true
 application:
   runner:
     enabled: false
