CID-1157: Add Broker config on README.md

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,5 @@ leanix:
       broker-url: ${BROKER_URL}
     auth:
       access-token-uri: https://${LEANIX_REGION}.leanix.net/services/mtm/v1
+    webhook:
+      enabled: true
