CID-1379: Add organization on save repo

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -11,6 +11,7 @@ leanix:
       user-token: user-token
       config-name: git-on-prem-config
       github-token: github-token
+      github-version: v3
       github-url: http://localhost:${wiremock.server.port:6666}
       broker-url: http://localhost:${wiremock.server.port:6666}
     auth:
