CID:1313 Adapt broker to ecst Send version as header

--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -33,3 +33,9 @@ empty-blocks:
   EmptyFunctionBlock:
     active: true
     excludes: [ '**/test/**' ]
+
+exceptions:
+  TooGenericExceptionCaught:
+    active: false
+  SwallowedException:
+    active: false
