--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -11,11 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: Get credentials
-        uses: leanix/secrets-action@master
-        with:
-          secret-store-credentials: ${{ secrets.INJECTED_SECRET_STORE_CREDENTIALS }}
+
       - uses: snyk/actions/gradle@master
         with:
           command: monitor
           args: -d --severity-threshold=high --org=leanix --project-name=net.leanix:vsm-github-broker --project-tags=Team=Cider
+          env:
+            SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
