--- a/.github/workflows/vsm-discovery-github-action.yml
+++ b/.github/workflows/vsm-discovery-github-action.yml
@@ -17,6 +17,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: LeanIX Secrets 🔒
+        uses: leanix/secrets-action@master
+        with:
+          secret-store-credentials: ${{ secrets.INJECTED_SECRET_STORE_CREDENTIALS }}
+
       - name: Set up JDK temurin 17
         uses: actions/setup-java@v3
         with:
@@ -28,6 +33,11 @@ jobs:
         with:
           build-root-directory: .
           arguments: cyclonedxBom
+
+      - name: VSM discovery
+        uses: leanix/vsm-discovery-github-action@v1.0.0
+        with:
+          api-token: ${{ secrets.VSM_LEANIX_API_TOKEN }}
 
       - name: Sync github-enterprise-connector.md docs
         uses: readmeio/rdme@7.3.0
